Add page for showing the personal detail

--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
+    "lib-flexible": "^0.3.2",
+    "node-sass": "^4.11.0",
+    "postcss-px2rem": "^0.3.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -60,7 +65,7 @@
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.1.6",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
