--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "lib-flexible": "^0.3.2",
+    "lodash": "latest",
     "node-sass": "^4.11.0",
     "postcss-px2rem": "^0.3.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "lodash": "latest"
+    "vue-i18n": "^8.10.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
