--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.11.0",
     "postcss-px2rem": "^0.3.0",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.1"
   },
